<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2" >

    <TextView
        android:id="@+id/info_cidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/cidade"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFF" />

    <TextView
        android:id="@+id/info_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/info_cidade"
        android:layout_below="@+id/info_cidade"
        android:layout_marginTop="18dp"
        android:text="@string/temp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFF"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/info_minima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/info_temp"
        android:layout_marginLeft="21dp"
        android:layout_toRightOf="@+id/info_temp"
        android:text="@string/minima"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFF" />

    <TextView
        android:id="@+id/info_maxima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/info_temp"
        android:layout_alignLeft="@+id/info_minima"
        android:text="@string/maxima"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFF" />

    <TextView
        android:id="@+id/info_condicao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/info_temp"
        android:layout_below="@+id/info_temp"
        android:layout_marginTop="14dp"
        android:text="@string/condicao"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFF" />

    <TextView
        android:id="@+id/info_umidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/info_condicao"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="30dp"
        android:text="@string/umidade"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFF" />

    <TextView
        android:id="@+id/info_vento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/info_umidade"
        android:layout_below="@+id/info_umidade"
        android:text="@string/vento"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFF" />

    <Button
        android:id="@+id/info_sobre"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_below="@+id/info_vento"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        android:onClick="exibirSobre"
        android:text="@string/menu_settings" />

</RelativeLayout>
